# golitaire

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
data/shaders/: Ellipse2DLine.frag  Ellipse2DLine.vert  alt.frag  default.frag  default.vert  default_frag.glsl  default_vtx.glsl  screen-space.vert
src/: App.cpp  App.h  CMakeLists.txt  Card.cpp  Card.h  CardEnums.h  Game.cpp  Game.h  Pile.cpp  Pile.h  SceneObject.cpp  SceneObject.h  SceneRenderer.cpp  SceneRenderer.h  main.cpp  stb_image_implementation.cpp  stb_image_write_implementation.cpp  utils.cpp  utils.h
src/LTK/: Buffer.cpp  Buffer.h  CMakeLists.txt  Ellipse2D.cpp  Ellipse2D.h  EllipseRenderer.cpp  EllipseRenderer.h  EllipseRenderer2D.cpp  EllipseRenderer2D.h  FlexiBuffer.h  GraphicsRenderer2D.cpp  GraphicsRenderer2D.h  Item3D.cpp  Item3D.h  Misc.h  Plane.cpp  Plane.h  Program.cpp  Program.h  Ray.cpp  Ray.h  RenderItem2D.cpp  RenderItem2D.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  VAO.cpp  VAO.h  Vertex.cpp  Vertex.h  Viewport.h  stb_image_implementation.cpp
src/glfw_cpp/: Context.cpp  Context.h
src/glfwpp/: Context.cpp  Context.h  Window.cpp  Window.h  WindowBuilder.cpp  WindowBuilder.h
